Adding dist2fxxxf

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://marcoramcharan.github.io/reactdeploy/",
   "name": "reactdeploy",
   "private": true,
   "version": "0.0.0",
